Defaults to light mode. Trying to fix css not loading on mobile

--- a/css/legend_adaptive.css
+++ b/css/legend_adaptive.css
@@ -32,8 +32,8 @@ For general good practice:
     }
 }
 
-/* Light theme */
-@media (prefers-color-scheme: light) {
+/* Light theme (default)*/
+    {
     body {
         color: #000;
         background-color: #fff;
